--- a/Cards/src/main/resources/application.yml
+++ b/Cards/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
     username: sa
     password: ''
   h2:
@@ -14,3 +14,21 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "prod"
+build:
+  version: "3.0"
+
+cards:
+  message: "Welcome to EasyBank cards related local APIs"
+  contactDetails:
+    name" : "Bao Nguyen"
+    email: "nguyenducbaokey@gmail.com"
+  onCallSupport:
+    - (+84) 788 049 042
+    - (+84) 123 456 789
