--- a/Cards/src/main/resources/application_prod.yml
+++ b/Cards/src/main/resources/application_prod.yml
@@ -6,8 +6,8 @@ spring:
 build:
   version: "2.0"
 
-accounts:
-  message: "Welcome to EasyBank accounts related prod APIs"
+cards:
+  message: "Welcome to EasyBank cards related prod APIs"
   contactDetails:
     name" : "Bao Nguyen - Product Owner"
     email: "nguyenducbaokey@gmail.com"
