--- a/Cards/src/main/resources/application_qa.yml
+++ b/Cards/src/main/resources/application_qa.yml
@@ -1,15 +1,15 @@
 spring:
   config:
     activate:
-      on-profile: "prod"
+      on-profile: "qa"
 
 build:
   version: "2.0"
 
-accounts:
-  message: "Welcome to EasyBank accounts related prod APIs"
+cards:
+  message: "Welcome to EasyBank cards related QA APIs"
   contactDetails:
-    name" : "Bao Nguyen - Product Owner"
+    name" : "Bao Nguyen - QA Lead"
     email: "nguyenducbaokey@gmail.com"
   onCallSupport:
     - (+84) 788 049 042
