building config user using Spring Cloud Config update Accounts, Loans, Cards to read properties from Config server

--- a/Accounts/src/main/resources/application_prod.yml
+++ b/Accounts/src/main/resources/application_prod.yml
@@ -1,16 +1,18 @@
-spring:
-  config:
-    activate:
-      on-profile: "prod"
+#spring:
+#  config:
+#    activate:
+#      on-profile: "prod"
+#
+#build:
+#  version: "2.0"
+#
+#accounts:
+#  message: "Welcome to EasyBank accounts related prod APIs"
+#  contactDetails:
+#    name" : "Bao Nguyen - Product Owner"
+#    email: "nguyenducbaokey@gmail.com"
+#  onCallSupport:
+#    - (+84) 788 049 042
+#    - (+84) 123 456 789
 
-build:
-  version: "2.0"
 
-accounts:
-  message: "Welcome to EasyBank accounts related prod APIs"
-  contactDetails:
-    name" : "Bao Nguyen - Product Owner"
-    email: "nguyenducbaokey@gmail.com"
-  onCallSupport:
-    - (+84) 788 049 042
-    - (+84) 123 456 789
