--- a/Accounts/src/main/resources/application.yml
+++ b/Accounts/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 spring:
+  application:
+    name: "accounts"
+  profiles:
+    active: "prod"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -15,20 +19,24 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
-  profiles:
-    active:
-      - "prod"
-build:
-  version: "3.0"
-
-accounts:
-  message: "Welcome to EasyBank accounts related local APIs"
-  contactDetails:
-    name" : "Bao Nguyen"
-    email: "nguyenducbaokey@gmail.com"
-  onCallSupport:
-    - (+84) 788 049 042
-    - (+84) 123 456 789
+#    configserver prefix is an indication to account microservices or any other spring boot application that it is going to connect with the config server.
+#   optional what are telling to the accounts microservice is, if it is not able to connect with the config server for whatever reason, it can still continue to start the microservice application.
+    import: "optional:configserver:http://localhost:8071/"
+#  config:
+#    import:
+#      - "application_qa.yml"
+#      - "application_prod.yml"
+#  profiles:
+#    active:
+#      - "prod"
+#build:
+#  version: "3.0"
+#
+#accounts:
+#  message: "Welcome to EasyBank accounts related local APIs"
+#  contactDetails:
+#    name" : "Bao Nguyen"
+#    email: "nguyenducbaokey@gmail.com"
+#  onCallSupport:
+#    - (+84) 788 049 042
+#    - (+84) 123 456 789
