--- a/Loans/src/main/resources/application.yml
+++ b/Loans/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8090
 spring:
+  application:
+    name: "loans"
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
@@ -15,20 +17,21 @@ spring:
       ddl-auto: update
     show-sql: true
   config:
-    import:
-      - "application_qa.yml"
-      - "application_prod.yml"
+    import: "optional:configserver:http://localhost:8071/"
+  #    import:
+#      - "application_qa.yml"
+#      - "application_prod.yml"
   profiles:
     active:
       - "prod"
-build:
-  version: "3.0"
-
-loans:
-  message: "Welcome to EasyBank loans related local APIs"
-  contactDetails:
-    name" : "Bao Nguyen"
-    email: "nguyenducbaokey@gmail.com"
-  onCallSupport:
-    - (+84) 788 049 042
-    - (+84) 123 456 789
+#build:
+#  version: "3.0"
+#
+#loans:
+#  message: "Welcome to EasyBank loans related local APIs"
+#  contactDetails:
+#    name" : "Bao Nguyen"
+#    email: "nguyenducbaokey@gmail.com"
+#  onCallSupport:
+#    - (+84) 788 049 042
+#    - (+84) 123 456 789
