--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -29,5 +29,8 @@ spring:
           # by mention this force-pull as true, we are telling to override the local changes whenever we are trying to start or restart our config server.
           # this will make sure your config server always reading the properties from the master location which is GitHub repo.
           force-pull: true
+
+encrypt:
+  key: "ehFnyvCwtrvRKR1Hwr0CDvUsIxZo6IbY"
 server:
   port: 8071
