docker-compose for local, prod, qa.. and auto changes value on containers

--- a/Loans/src/main/resources/application.yml
+++ b/Loans/src/main/resources/application.yml
@@ -22,8 +22,7 @@ spring:
 #      - "application_qa.yml"
 #      - "application_prod.yml"
   profiles:
-    active:
-      - "prod"
+    active: "prod"
 #build:
 #  version: "3.0"
 #
