--- a/Loans/src/main/resources/application.yml
+++ b/Loans/src/main/resources/application.yml
@@ -3,26 +3,24 @@ server:
 spring:
   application:
     name: "loans"
+  profiles:
+    active: "prod"
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
+    url: jdbc:mysql://localhost:3307/loansdb
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # always try to execute the scripts that I have mentioned inside the schema.sql
+  sql:
+    init:
+      mode: always
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
     show-sql: true
   config:
     import: "optional:configserver:http://localhost:8071/"
   #    import:
 #      - "application_qa.yml"
 #      - "application_prod.yml"
-  profiles:
-    active: "prod"
 #build:
 #  version: "3.0"
 #
