--- a/Cards/pom.xml
+++ b/Cards/pom.xml
@@ -58,8 +58,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -105,7 +105,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<to>
-						<image>baotuyloan1/${project.artifactId}:241210</image>
+						<image>baotuyloan1/${project.artifactId}:241215</image>
 					</to>
 				</configuration>
 			</plugin>
