--- a/Loans/pom.xml
+++ b/Loans/pom.xml
@@ -64,8 +64,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -104,7 +104,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>baotuyloan1/${project.artifactId}:241210</name>
+						<name>baotuyloan1/${project.artifactId}:241215</name>
 					</image>
 					<excludes>
 						<exclude>
