--- a/Accounts/Jenkinsfile
+++ b/Accounts/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
                      # get current day in yyMMdd
                     TAG=$(date +'%y%m%d')
                     echo "Building Docker image with tag: $TAG"
-                    docker build . -t baotuyloan1/accounts:$(Get-Date -Format "yyMMdd")
+                    docker build . -t baotuyloan1/accounts:$TAG
                 '''
             }
         }
