fixing can't find pom.xml in Accounts

--- a/Accounts/Jenkinsfile
+++ b/Accounts/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
                 sh '''
                     ls -la
                     mvn -version
-                    mvn clean install
+                    mvn -f Accounts/pom.xml clean install
                 '''
             }
         }
