--- a/Accounts/Jenkinsfile
+++ b/Accounts/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build Jar') {
             agent {
                 docker {
-                    image 'maven:3.9.9-amazoncorretto-8-al2023'
+                    image 'maven:3.8.3-openjdk-17'
                     reuseNode true
                 }
             }
