fixing failed to read dockerfile: open Dockerfile: no such file or directory

--- a/Accounts/Jenkinsfile
+++ b/Accounts/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
                  # get current day in yyMMdd
                 TAG=$(date +'%y%m%d')
                 echo "Building Docker image with tag: $TAG"
-                docker build . -t baotuyloan1/accounts:$TAG
+                docker build -f Accounts/Dockerfile Accounts -t baotuyloan1/accounts:$TAG
                 '''
             }
         }
