--- a/docker-compose/prod/common-config.yml
+++ b/docker-compose/prod/common-config.yml
@@ -2,6 +2,7 @@ services:
   network-deploy-service:
     networks:
       - easybank
+
   microservice-db-config:
     extends:
       service: network-deploy-service
@@ -13,6 +14,7 @@ services:
       start_period: 10s
     environment:
       MYSQL_ROOT_PASSWORD: root
+
   microservice-base-config:
     extends:
       service: network-deploy-service
@@ -23,14 +25,18 @@ services:
           memory: 700M
     environment:
       SPRING_RABBITMQ_HOST: "rabbit"
+
   microservice-configserver-config:
     extends:
       service: microservice-base-config
     depends_on:
       configserver:
         condition: service_healthy
+      eurekaserver:
+        condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: prod
       SPRING_CONFIG_IMPORT: "optional:configserver:http://configserver:8071/"
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eurekaserver:8070/eureka
