- Build Edge Server Using Spring Cloud Gateway - Design patterns around API Gateway

--- a/Accounts/src/main/resources/application.yml
+++ b/Accounts/src/main/resources/application.yml
@@ -74,7 +74,7 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: "http://localhost:8070/eureka/"
 
 # information that is going to be displayed inside the Eureka dashboard
 info:
@@ -82,3 +82,10 @@ info:
     name: "accounts"
     description: "Easy Bank Accounts Application"
     version: "1.0.0"
+
+
+logging:
+  level:
+    com:
+      example:
+        microserviceaccounts: DEBUG
