--- a/Cards/src/main/resources/application.yml
+++ b/Cards/src/main/resources/application.yml
@@ -69,7 +69,7 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
+      defaultZone: "http://localhost:8070/eureka/"
 
 # information that is going to be displayed inside the Eureka dashboard
 info:
@@ -77,3 +77,10 @@ info:
     name: "cards"
     description: "Easy Bank Cards Application"
     version: "1.0.0"
+
+
+logging:
+  level:
+    com:
+      microservice:
+        cards: DEBUG
