--- a/Cards/src/main/resources/application.yml
+++ b/Cards/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
 #cards:
 #  message: "Welcome to EasyBank cards related local APIs"
 #  contactDetails:
-#    name" : "Bao Nguyen"
+#    name : "Bao Nguyen"
 #    email: "nguyenducbaokey@gmail.com"
 #  onCallSupport:
 #    - (+84) 788 049 042
@@ -53,6 +53,14 @@ management:
   # enable an actuator URL which will allow me to shut down my accounts service gracefully.
   endpoint:
     shutdown:
+      enabled: true
+    health:
+      probes:
+        enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
       enabled: true
 
 # expose shutdown api
