--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -31,6 +31,12 @@
 		<spring-cloud.version>2023.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -79,7 +85,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<to>
-						<image>baotuyloan1/${project.artifactId}:241231</image>
+						<image>baotuyloan1/${project.artifactId}:250103</image>
 					</to>
 				</configuration>
 			</plugin>
