--- a/Loans/src/main/resources/application.yml
+++ b/Loans/src/main/resources/application.yml
@@ -54,6 +54,14 @@ management:
   endpoint:
     shutdown:
       enabled: true
+    health:
+      probes:
+        enabled: true
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
 
 # expose shutdown api
 #endpoints:
