--- a/docker-compose/prod/docker-compose.yml
+++ b/docker-compose/prod/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       service: microservice-db-config
       file: common-config.yml
   configserver:
-    image: baotuyloan1/configserver:241231
+    image: baotuyloan1/configserver:250103
     #    if you don't provide container_name, a random name will given to your container by the Docker server
     container_name: configserver-ms
     ports:
@@ -63,7 +63,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: baotuyloan1/eurekaserver:241231
+    image: baotuyloan1/eurekaserver:250103
     #    if you don't provide container_name, a random name will given to your container by the Docker server
     container_name: eurekaserver-ms
     ports:
@@ -86,26 +86,76 @@ services:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: baotuyloan1/accounts:241231
+    image: baotuyloan1/accounts:250104
     #    if you don't provide container_name, a random name will given to your container by the Docker server
     container_name: accounts-ms
     ports:
       - "8080:8080"
-    environment:
-      SPRING_APPLICATION_NAME: "accounts"
-      SPRING_DATASOURCE_URL: jdbc:mysql://accountsdb:3306/accountsdb
+    healthcheck:
+      #      call api and check if the status is returned up ?, otherwise exit
+      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+      #      do 10 times with an interval of 10s
+      interval: 10s
+      #      inside each check it has to wait for the maximum 5s to get the response from the URL.
+      timeout: 5s
+      #      if there is a failure, do the retries for 10 times
+      retries: 10
+      #      execute these healthy check command only after 10s
+      start_period: 10s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
+    environment:
+      SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: jdbc:mysql://accountsdb:3306/accountsdb
     depends_on:
-      accountsdb:
+      cardsdb:
         condition: service_healthy
+
+  #  accounts:
+  #    image: baotuyloan1/accounts:250103
+  ##    if you don't provide container_name, a random name will given to your container by the Docker server
+  #    container_name: accounts-ms
+  #    ports:
+  #      - "8080:8080"
+  #    environment:
+  #      SPRING_APPLICATION_NAME: "accounts"
+  #      SPRING_DATASOURCE_URL: jdbc:mysql://accountsdb:3306/accountsdb
+  #    healthcheck:
+  #      #      call api and check if the status is returned up ?, otherwise exit
+  #      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+  #      #      do 10 times with an interval of 10s
+  #      interval: 10s
+  #      #      inside each check it has to wait for the maximum 5s to get the response from the URL.
+  #      timeout: 5s
+  #      #      if there is a failure, do the retries for 10 times
+  #      retries: 10
+  #      #      execute these healthy check command only after 10s
+  #      start_period: 10s
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-eureka-config
+  #    depends_on:
+  #      accountsdb:
+  #        condition: service_healthy
+
   loans:
-    image: baotuyloan1/loans:241231
+    image: baotuyloan1/loans:250104
     #    if you don't provide container_name, a random name will given to your container by the Docker server
     container_name: loans-ms
     ports:
       - "8090:8090"
+    healthcheck:
+      #      call api and check if the status is returned up ?, otherwise exit
+      test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
+      #      do 10 times with an interval of 10s
+      interval: 10s
+      #      inside each check it has to wait for the maximum 5s to get the response from the URL.
+      timeout: 5s
+      #      if there is a failure, do the retries for 10 times
+      retries: 10
+      #      execute these healthy check command only after 10s
+      start_period: 10s
     environment:
       SPRING_APPLICATION_NAME: "loans"
       SPRING_DATASOURCE_URL: jdbc:mysql://loansdb:3306/loansdb
@@ -115,12 +165,24 @@ services:
     depends_on:
       loansdb:
         condition: service_healthy
+
   cards:
-    image: baotuyloan1/cards:241231
+    image: baotuyloan1/cards:250103
     #    if you don't provide container_name, a random name will given to your container by the Docker server
     container_name: cards-ms
     ports:
       - "9000:9000"
+    healthcheck:
+      #      call api and check if the status is returned up ?, otherwise exit
+      test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
+      #      do 10 times with an interval of 10s
+      interval: 10s
+      #      inside each check it has to wait for the maximum 5s to get the response from the URL.
+      timeout: 5s
+      #      if there is a failure, do the retries for 10 times
+      retries: 10
+      #      execute these healthy check command only after 10s
+      start_period: 10s
     extends:
       file: common-config.yml
       service: microservice-eureka-config
@@ -130,6 +192,26 @@ services:
     depends_on:
       cardsdb:
         condition: service_healthy
+
+  gatewayserver:
+    image: baotuyloan1/gatewayserver:250103
+    #    if you don't provide container_name, a random name will given to your container by the Docker server
+    container_name: gatewayserver-ms
+    ports:
+      - "8072:8072"
+    extends:
+      file: common-config.yml
+      service: microservice-eureka-config
+    environment:
+      SPRING_APPLICATION_NAME: "gatewayserver"
+    depends_on:
+      accounts:
+        condition: service_healthy
+      loans:
+        condition: service_healthy
+      cards:
+        condition: service_healthy
+
 # we create a network with the name easybank and the driver is bridge.
 # the reason why we need to create a network is because we want to make sure all our containers are able to communicate with each other.
 # we give the name easybank to the network so that we can use this network name.
