--- a/gatewayserver/pom.xml
+++ b/gatewayserver/pom.xml
@@ -67,6 +67,12 @@
 			<scope>test</scope>
 		</dependency>
 
+<!--		using for rate limiter-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
